--- a/projects/cvfcs.html
+++ b/projects/cvfcs.html
@@ -21,7 +21,7 @@ future will impact safety not just through an increasing incidence of errors and
 interactions, but by delaying and preventing the deployment of crucial safety functions.</p>
 
 <p>In this NASA-funded project we are addressing these challenges by developing a framework for compositional
-verification that will permit the verification of systems exceeding the complexity limits of
+verification that will permit the verification of systems that exceed the complexity limits of
 current approaches. Our approach is based on:
 <ul>
 <li>Modeling the system architecture using the industry standard notations that engineers will be using</li>
@@ -31,9 +31,8 @@ powerful general purpose verification engines such as model checkers and theorem
 architecture to divide the verification task into manageable, reusable pieces </li>
 </ul>
 This will significantly reduce verification costs by identifying and correcting system design errors
-early in the life cycle rather than waiting until system integration. We propose to validate
-this approach and the tools we develop on a realistic aircraft flight guidance system model
-that we will make publicly available.</p>
+early in the life cycle rather than waiting until system integration. We are validating
+this approach and the tools we develop on a realistic fault-tolerant flight control system model.</p>
 
 <p>Our compositional approach exploits the verification effort and artifacts that are
 already part of typical software component verification work. We use
