--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@ Loonwerks is a finite set of formal methods researchers based in the Minneapolis
 </p>
 
 <img src="/images/minneapolis-bw.png" />
+
+<p id="disclaimer">
+Loonwerks is solely responsible for the content of this web site. Such
+content does not necessarily represent the views of Rockwell Collins.
+</p>
+
 </div>
 
