--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -26,9 +26,9 @@ sort: 2014
 <p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird helicopter to demonstrate their practicality and effectiveness.  At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.  
 Our tools for secure software development and analysis are available for transition to other vehicle programs.  </p>
 
-A brief introduction to the goals of the project:
+<p>A brief introduction to the goals of the project:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/_W8syquqxus" frameborder="0" allowfullscreen></iframe>
-A nice overview of Phase 1 of the project from our partners at NICTA:
+<p>A nice overview of Phase 1 of the project from our partners at NICTA:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/2tokRPFrKx0" frameborder="0" allowfullscreen></iframe>
 
 
