--- a/publications/cofer2013dagstuhl.html
+++ b/publications/cofer2013dagstuhl.html
@@ -1,12 +1,12 @@
 ---
 layout: publication
-authors: [D. Cofer, S. Miller]
-title: "DO-333 Certification Case Studies"
-info: NFM 2014
-link: "pdf/cofer2014nfm.pdf"
-date: 2014-04-30 00:00:00
-projects: [DO-333]
+authors: [D. Cofer, J. Hatcliff, M. Huhn, M. Lawford]
+title: "Software Certification: Methods and Tools"
+info: Dagstuhl Seminar 13051
+link: "http://drops.dagstuhl.de/opus/volltexte/2013/4011/"
+date: 2013-01-27 00:00:00
+projects: 
 ---
 
-RTCA DO-333, Formal Methods Supplement to DO-178C and DO-278A, provides guidance for software developers wishing to use formal methods in the certification of airborne systems and air traffic management systems. This paper presents three case studies describing the use of different classes of formal methods to satisfy DO-178C certification objectives. The case studies examine different aspects of a common avionics example, a dual-channel Flight Guidance System (FGS), which is representative of the issues encountered in actual developments. The three case studies illustrate the use of theorem proving, model checking, and abstract interpretation. Each of these techniques has strengths and weaknesses and each could be applied to different life cycle data items and different objectives than those described here. Our purpose is to illustrate a reasonable application of each of these techniques to produce the evidence needed to satisfy certification objectives in a realistic avionics application. We hope that these case studies will be useful to industry and government personnel in understanding formal methods and the benefits they can provide.
+With the pervasive deployment of software in dependable systems used in everyday life,society is increasingly demanding that software used in critical systems must meet minimum safety, security and reliability standards. Certification is the procedure by which an authorized person or agency assesses and verifies characteristics of a system or product in accordance with established requirements, standards, or regulations. For software, it encompasses traditional notions of verification, but also includes the evidence, tools, methods, and personnel qualifications that are needed to convince the certification authority that the system or product conforms to the relevant standard. Manufacturers of these systems need consistent and effective guidelines as to what constitutes acceptable evidence of software quality, and how to achieve it. Compared to process-oriented certification procedures, recent approaches provide evidence for dependability by the thorough evaluation of the product itself and the adequacy, coverage and maturity of design and quality assurance methods. Substantial progress has been made in areas including safety and assurance cases, the conceptual foundation of evidence and formal methods, and tooling for software design and verification. New approaches are necessary to develop holistic and cost-effective methodologies and to provide integrated tool support for creating certifiable software-intensive systems, as well as product-focused approaches to certifying these systems. Experts from academia and industrial practitioners met in the <A href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=13051" Dagstuhl Seminar 13051 "Software Certification: Methods and Tools"</A> to discuss and software certification challenges, best practices, and the latest advances in certification technologies in several different software-intensive domains (automotive, aircraft, medical, nuclear, and rail).
 
