--- a/projects/meta.html
+++ b/projects/meta.html
@@ -1,17 +1,15 @@
 ---
 layout: project
-shortname: CVFCS
-longname: Compositional Verification of Flight Critical Systems
-sort: 2013
+shortname: META
+longname: Complexity-Reducing Design Patterns for Cyber-Physical Systems
+sort: 2011
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci, rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend ligula eget justo consequat tempus. Sed tincidunt finibus enim a fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
+<p>DARPA’s META program funded research to significantly improve the design, manufacture, and verification of complex cyber-physical systems. THis project directly addressed this goal by allowing the system architecture to be composed from libraries of complexity reducing design patterns with formally guaranteed properties. This allows new system designs to be developed rapidly using patterns that have been shown to reduce unnecessary complexity and coupling between components. This work also deeply embeds formal verification into the design process to enable correct-by-construction development of systems that work the first time. The use of components with formally specified contracts, design patterns that provide formally guaranteed properties, and an architectural modeling language with a formal semantics ensures that the system design is known to meet its requirements even before it is implemented. </p>
 
-Cras rutrum mauris at lectus placerat, at rutrum odio suscipit. Morbi ac nisi a ante pellentesque sollicitudin. Vivamus lectus ligula, commodo eget felis a, luctus placerat nibh. Duis dignissim eros in felis porttitor, eget sodales dolor consequat. Vestibulum a pellentesque lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas euismod mi sed congue porttitor. Donec egestas nisi eu scelerisque porta. Nullam condimentum ligula leo, sed interdum velit luctus id.
-
-Nunc sit amet enim cursus, accumsan massa id, ultrices est. In fermentum ipsum odio, quis posuere libero pretium vitae. Nunc vitae tempus nisi. Suspendisse potenti. Duis at turpis eu justo scelerisque porttitor. Fusce sed molestie nisl. Vivamus sit amet tincidunt massa. Etiam tristique lectus metus, sodales maximus mi sollicitudin sit amet.
-
-In blandit nec tortor iaculis tempor. Vestibulum sed condimentum quam. Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis sapien. Aliquam malesuada urna ex, vel dapibus leo tempus vel. Phasellus in tempus arcu. Morbi eleifend lacinia turpis quis fermentum. Praesent a lobortis neque. Nam sit amet turpis eget enim eleifend pulvinar. Sed non magna consectetur, vestibulum lacus id, imperdiet mauris. In vestibulum libero velit, at semper orci eleifend eu. Suspendisse potenti.
-
-Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula tincidunt finibus at ac urna. Phasellus auctor purus eu mauris ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a nisi nec tortor accumsan blandit. Donec pretium libero in auctor semper.
-
+<p>Rockwell Collins and its teammates, the University of Illinois at Urbana-Champaign (UIUC), the University of Minnesota (UMN), and the WW Technology Group (WWTG), addressed these challenges by developing capabilities in three key areas: </p>
+<ul>
+<li>Complexity-reducing system design patterns with formally guaranteed properties, supporting correct-by-construction composition of system designs </li>
+<li>Architectural modeling and analysis to support virtual integration, composition, and verification of system-level properties</li>
+<li>Automated formal verification deeply embedded in the system design process in order to prevent errors, resulting in dramatic schedule efficiencies </li>
+</ul>
