--- a/publications/cofer2010acm.html
+++ b/publications/cofer2010acm.html
@@ -1,12 +1,12 @@
 ---
 layout: publication
-authors: [D. Cofer, S. Miller]
-title: "DO-333 Certification Case Studies"
-info: NFM 2014
-link: "pdf/cofer2014nfm.pdf"
-date: 2014-04-30 00:00:00
-projects: [DO-333]
+authors: [S. Miller, M. Whalen, D. Cofer]
+title: "Software model checking takes off"
+info: Communications of the ACM, 2013
+link: "http://dl.acm.org/ft_gateway.cfm?id=1646372&ftid=738657&dwn=1&CFID=449573528&CFTOKEN=44430412"
+date: 2010-02-01 00:00:00
+projects: 
 ---
 
-RTCA DO-333, Formal Methods Supplement to DO-178C and DO-278A, provides guidance for software developers wishing to use formal methods in the certification of airborne systems and air traffic management systems. This paper presents three case studies describing the use of different classes of formal methods to satisfy DO-178C certification objectives. The case studies examine different aspects of a common avionics example, a dual-channel Flight Guidance System (FGS), which is representative of the issues encountered in actual developments. The three case studies illustrate the use of theorem proving, model checking, and abstract interpretation. Each of these techniques has strengths and weaknesses and each could be applied to different life cycle data items and different objectives than those described here. Our purpose is to illustrate a reasonable application of each of these techniques to produce the evidence needed to satisfy certification objectives in a realistic avionics application. We hope that these case studies will be useful to industry and government personnel in understanding formal methods and the benefits they can provide.
+A translator framework enables the use of model checking in complex avionics systems and other industrial settings.
 
