--- a/publications/cofer2010spin.html
+++ b/publications/cofer2010spin.html
@@ -1,12 +1,11 @@
 ---
 layout: publication
-authors: [D. Cofer, S. Miller]
-title: "DO-333 Certification Case Studies"
-info: NFM 2014
-link: "pdf/cofer2014nfm.pdf"
-date: 2014-04-30 00:00:00
-projects: [DO-333]
+authors: [D. Cofer]
+title: "Model Checking: Cleared for Take Off"
+info: SPIN 2010
+link: "pdf/cofer2010spin.pdf"
+date: 2010-09-27 00:00:00
+projects: 
 ---
 
-RTCA DO-333, Formal Methods Supplement to DO-178C and DO-278A, provides guidance for software developers wishing to use formal methods in the certification of airborne systems and air traffic management systems. This paper presents three case studies describing the use of different classes of formal methods to satisfy DO-178C certification objectives. The case studies examine different aspects of a common avionics example, a dual-channel Flight Guidance System (FGS), which is representative of the issues encountered in actual developments. The three case studies illustrate the use of theorem proving, model checking, and abstract interpretation. Each of these techniques has strengths and weaknesses and each could be applied to different life cycle data items and different objectives than those described here. Our purpose is to illustrate a reasonable application of each of these techniques to produce the evidence needed to satisfy certification objectives in a realistic avionics application. We hope that these case studies will be useful to industry and government personnel in understanding formal methods and the benefits they can provide.
-
+The increasing popularity of model-based development tools and the growing power of model checkers are making it practical to use formal methods for verification of avionics software. This paper describes a translator framework that enables model checking tools to be easily integrated into a model-based development environment to increase assurance, reduce cost, and satisfy certification objectives. In particular, we describe how formal methods can be used to satisfy certification objectives of DO-178C/ED-12C, the new guidance document for software aspects of certification for commercial aircraft.
