--- a/publications/cofer2009dasc.html
+++ b/publications/cofer2009dasc.html
@@ -1,12 +1,11 @@
 ---
 layout: publication
-authors: [D. Cofer, S. Miller]
-title: "DO-333 Certification Case Studies"
-info: NFM 2014
-link: "pdf/cofer2014nfm.pdf"
-date: 2014-04-30 00:00:00
-projects: [DO-333]
+authors: [S. Miller, D. Cofer, L. Sha, J. Meseguer, A. Al-Nayeem]
+title: "Implementing logical synchrony in integrated modular avionics"
+info: DASC 2009
+link: "http://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=5347579"
+date: 2009-10-23 00:00:00
+projects: [META]
 ---
 
-RTCA DO-333, Formal Methods Supplement to DO-178C and DO-278A, provides guidance for software developers wishing to use formal methods in the certification of airborne systems and air traffic management systems. This paper presents three case studies describing the use of different classes of formal methods to satisfy DO-178C certification objectives. The case studies examine different aspects of a common avionics example, a dual-channel Flight Guidance System (FGS), which is representative of the issues encountered in actual developments. The three case studies illustrate the use of theorem proving, model checking, and abstract interpretation. Each of these techniques has strengths and weaknesses and each could be applied to different life cycle data items and different objectives than those described here. Our purpose is to illustrate a reasonable application of each of these techniques to produce the evidence needed to satisfy certification objectives in a realistic avionics application. We hope that these case studies will be useful to industry and government personnel in understanding formal methods and the benefits they can provide.
-
+Many avionics systems must be implemented as redundant, distributed systems in order to provide the necessary level of fault tolerance. To correctly perform their function, the individual nodes of these systems must agree on some part of the global system state. Developing protocols to achieve this agreement is greatly simplified if the nodes execute synchronously relative to each other, but many Integrated Modular Avionics architectures assume nodes will execute asynchronously. This paper presents a simple design pattern, Physically Asynchronous/Logically Synchronous (PALS), that allows developers to design and verify a distributed, redundant system as though all nodes execute synchronously. This synchronous design can then be distributed over a physically asynchronous architecture in such a way that the logical correctness of the design is preserved. Use of this complexity reducing design pattern greatly simplifies the development and verification of fault tolerant distributed applications, ensures optimal system performance, and provides a standard argument for system certification.
