--- a/publications/cofer2007fmics.html
+++ b/publications/cofer2007fmics.html
@@ -1,12 +1,12 @@
 ---
 layout: publication
-authors: [D. Cofer, S. Miller]
-title: "DO-333 Certification Case Studies"
-info: NFM 2014
-link: "pdf/cofer2014nfm.pdf"
-date: 2014-04-30 00:00:00
-projects: [DO-333]
+authors: [M. Whalen, D. Cofer, S. Miller, B. Krogh, W. Storm:]
+title: "Integration of Formal Analysis into a Model-Based Software Development Process"
+info: FMICS 2007
+link: "https://www.umsec.umn.edu/sites/www.umsec.umn.edu/files/FMICS07-Rockwell-Collins.pdf"
+date: 2007-07-01 00:00:00
+projects: 
 ---
 
-RTCA DO-333, Formal Methods Supplement to DO-178C and DO-278A, provides guidance for software developers wishing to use formal methods in the certification of airborne systems and air traffic management systems. This paper presents three case studies describing the use of different classes of formal methods to satisfy DO-178C certification objectives. The case studies examine different aspects of a common avionics example, a dual-channel Flight Guidance System (FGS), which is representative of the issues encountered in actual developments. The three case studies illustrate the use of theorem proving, model checking, and abstract interpretation. Each of these techniques has strengths and weaknesses and each could be applied to different life cycle data items and different objectives than those described here. Our purpose is to illustrate a reasonable application of each of these techniques to produce the evidence needed to satisfy certification objectives in a realistic avionics application. We hope that these case studies will be useful to industry and government personnel in understanding formal methods and the benefits they can provide.
+The next generation of military aerospace systems will include advanced control systems whose size and complexity will challenge current verification and validation approaches. The recent adoption by the aerospace industry of model-based development tools such as Simulink® and SCADE SuiteTM is removing barriers to the use of formal methods for the verification of critical avionics software. Formal methods use mathematics to prove that software design models meet their requirements, and so can greatly increase confidence in the safety and correctness of software. Recent advances in formal analysis tools have made it practical to formally verify important properties of these models to ensure that design defects are identified and corrected early in the lifecycle. This paper describes how formal analysis tools can be inserted into a model-based development process to decrease costs and increase quality of critical avionics software.
 
