--- a/publications/cofer2007fmics.html
+++ b/publications/cofer2007fmics.html
@@ -1,6 +1,6 @@
 ---
 layout: publication
-authors: [M. Whalen, D. Cofer, S. Miller, B. Krogh, W. Storm:]
+authors: [M. Whalen, D. Cofer, S. Miller, B. Krogh, W. Storm]
 title: "Integration of Formal Analysis into a Model-Based Software Development Process"
 info: FMICS 2007
 link: "https://www.umsec.umn.edu/sites/www.umsec.umn.edu/files/FMICS07-Rockwell-Collins.pdf"
