--- a/projects/fmtq.html
+++ b/projects/fmtq.html
@@ -1,17 +1,27 @@
 ---
 layout: project
-shortname: DO-333
-longname: Certification Case Studies using Formal Methods
-sort: 2012
+shortname: FMTQ
+longname: Formal Methods Tool Qualification
+sort: 2014
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper varius dui vitae dictum. Etiam et diam pretium, sagittis tellus sit amet, dapibus nunc. Ut faucibus quam tincidunt odio mollis, eu laoreet odio vestibulum. Nam efficitur ante eu justo finibus, vel dapibus tellus finibus. Donec feugiat orci et sodales euismod. Ut odio orci, rutrum ac mauris non, tincidunt sollicitudin nulla. Cras eleifend ligula eget justo consequat tempus. Sed tincidunt finibus enim a fermentum. Duis vel velit laoreet, pretium nunc vitae, aliquam velit. Nulla ligula dui, convallis aliquam rutrum non, tincidunt vitae leo. Nullam dictum sollicitudin nulla sit amet ullamcorper.
+<p>Formal methods tools are expected to play a larger role in implementing and
+certifying safety-critical systems over the next decade. Updated certification
+guidance for airborne software was recently published in RTCA DO-178C.  A 
+companion document, DO-333, the formal methods supplement, allows applicants to receive certification credit for
+verification conducted using formal methods.  DO-330, Software Tool Qualification
+Considerations, provides guidance for developers and users of software tools for
+safety-critical domains. DO-330 qualification of formal methods tools,
+and more generally, the larger question of formal methods tool dependability,
+forms a largely unexplored area of study.</p>
 
-Cras rutrum mauris at lectus placerat, at rutrum odio suscipit. Morbi ac nisi a ante pellentesque sollicitudin. Vivamus lectus ligula, commodo eget felis a, luctus placerat nibh. Duis dignissim eros in felis porttitor, eget sodales dolor consequat. Vestibulum a pellentesque lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas euismod mi sed congue porttitor. Donec egestas nisi eu scelerisque porta. Nullam condimentum ligula leo, sed interdum velit luctus id.
+<p>The goal of this NASA-funded project is to investigate the general problem of what
+sorts of assurances are necessary and appropriate to justify the application of
+formal methods tools throughout all phases of design in real safety-critical
+settings. We will produce practical examples on how to qualify typical formal 
+verification tools in each of the three categories identified in DO-333 (theorem proving, 
+model checking, and abstract interpretation) and explore promising new approaches 
+to the qualification of formal methods tools. We will produce the qualification artifacts for an open source formal
+verification tool, the <A href="http://clc.cs.uiowa.edu/Kind/">Kind model checker</A>. We will also investigate the feasibility of independently verifying tool outputs through the generation of a proof certificate and verification of the certificate with a qualified proof checker.</p>
 
-Nunc sit amet enim cursus, accumsan massa id, ultrices est. In fermentum ipsum odio, quis posuere libero pretium vitae. Nunc vitae tempus nisi. Suspendisse potenti. Duis at turpis eu justo scelerisque porttitor. Fusce sed molestie nisl. Vivamus sit amet tincidunt massa. Etiam tristique lectus metus, sodales maximus mi sollicitudin sit amet.
-
-In blandit nec tortor iaculis tempor. Vestibulum sed condimentum quam. Donec ante dolor, aliquet sed aliquet vel, malesuada facilisis sapien. Aliquam malesuada urna ex, vel dapibus leo tempus vel. Phasellus in tempus arcu. Morbi eleifend lacinia turpis quis fermentum. Praesent a lobortis neque. Nam sit amet turpis eget enim eleifend pulvinar. Sed non magna consectetur, vestibulum lacus id, imperdiet mauris. In vestibulum libero velit, at semper orci eleifend eu. Suspendisse potenti.
-
-Etiam interdum aliquet ante sed dapibus. Vestibulum eget odio vitae neque rutrum vulputate id ac elit. Suspendisse a purus sed ligula tincidunt finibus at ac urna. Phasellus auctor purus eu mauris ullamcorper, in molestie felis suscipit. Nam eget neque leo. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse a nisi nec tortor accumsan blandit. Donec pretium libero in auctor semper.
-
+<p>We are also organizing a <A href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=15182">Dagstuhl Seminar</A> to explore the subject of tool qualification with the formal methods research community.</p>
