Add SMACCM logo

--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -2,8 +2,12 @@
 layout: project
 shortname: SMACCM
 longname: Secure Mathematically-Assured Composition of Control Models
-sort: 2014
+sort: 2012
 ---
+
+<div id="project-logo">
+<img src="/images/smaccm.png" />
+</div>
 
 <p>UAVs and other military aircraft have off-vehicle network connections for command and control, sharing sensor data, and coordination with other forces.  This connectivity provides tremendous new functionality, but also exposes these military assets to the same security risks that plague our PCs and web servers.  </p>
 
