fixing some weird stuff

--- a/publications/backes2010jnmc.html
+++ b/publications/backes2010jnmc.html
@@ -6,7 +6,7 @@ info: International Journal of Nanotechnology and Molecular Computation, pp. 39-
 link: "pdf/qian2010jnmc.pdf"
 date: 2010-11-01 00:00:00
 ---
-merging
+Emerging
 technologies
 for
 nanoscale
