--- a/publications/backes2011iwls.html
+++ b/publications/backes2011iwls.html
@@ -7,7 +7,7 @@ link: "pdf/backes2011iwls.pdf"
 slides: "slides/backes2011iwls.ppt"
 date: 2011-11-01 00:00:00
 ---
-the results of modern synthesis tools are heavily
+The results of modern synthesis tools are heavily
 influenced by the initial structure of the designs they are given.
 Many synthesis tools use And-Inverter Graphs (AIGs) as the
 underlying representation in the technology-independent phase
