--- a/publications/backes2013spin.html
+++ b/publications/backes2013spin.html
@@ -7,8 +7,7 @@ link: "pdf/backes2013spin.pdf"
 date: 2013-03-01 00:00:00
 ---
 Regression verification techniques are used to prove equivalence of closely related program versions. Existing regression verification
-techniques leverage the similarities between program versions to help improve analysis scalability by using abstraction and decomposition tech-
-niques. These techniques are sound but not complete. In this work, we
+techniques leverage the similarities between program versions to help improve analysis scalability by using abstraction and decomposition techniques. These techniques are sound but not complete. In this work, we
 propose an alternative technique to improve scalability of regression verification that leverages change impact information to partition program
 execution behaviors. Program behaviors in each version are partitioned
 into (a) behaviors impacted by the changes and (b) behaviors not impacted (unimpacted) by the changes. Our approach uses a combination of
