--- a/publications/kune2013sp.html
+++ b/publications/kune2013sp.html
@@ -6,7 +6,7 @@ info: Proceedings of IEEE Symposium on Secuirty and Privacy, 2013
 link: "pdf/kune2013sp.pdf"
 date: 2013-03-01 00:00:00
 ---
-electromagnetic interference (EMI) affects circuits by inducing voltages on conductors. Analog sensing of
+Electromagnetic interference (EMI) affects circuits by inducing voltages on conductors. Analog sensing of
 signals on the order of a few millivolts is particularly sensitive
 to interference. This work (1) measures the susceptibility of
 analog sensor systems to signal injection attacks by intentional,
