--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -15,7 +15,7 @@ He earned his PhD in Computer Science from the University of
 Minnesota.
 
 He is the principle developer
-of <a href="https://github.com/agacek/jkind">JKind</a>, a k-induction
+of <a href="/tools/jkind.html">JKind</a>, a k-induction
 model checker used in various projects within Rockwell Collins.
 
 He is currently working as part of the air vehicle team in DARPA's
