Stubs for other tools

--- a/publications/gacek2014hilt.html
+++ b/publications/gacek2014hilt.html
@@ -7,6 +7,7 @@ link: "http://arxiv.org/pdf/1409.4629.pdf"
 slides: "slides/gacek2014hilt.pptx"
 date: 2014-10-20 00:00:00
 projects: [SMACCM]
+tools: [Resolute]
 ---
 
 Arguments about the safety, security, and correctness of a complex
