--- a/publications/whalen2013ieee.html
+++ b/publications/whalen2013ieee.html
@@ -6,6 +6,7 @@ info: "IEEE Software, vol. 30, no. 2, pp. 54-60, March-April 2013, doi:10.1109/M
 link: "/publications/pdf/whalen2013ieee.pdf"
 date: 2013-04-01 00:00:00
 projects: [SMACCM]
+tools: [AGREE]
 ---
 
 Systems are naturally constructed in hierarchies, in which design
