--- a/publications/cofer2012nfm.html
+++ b/publications/cofer2012nfm.html
@@ -5,6 +5,7 @@ title: "Compositional verification of architectural models"
 info: NASA Formal Methods, 2012, pp. 126-140
 link: "/publications/pdf/cofer2012nfm.pdf"
 projects: [SMACCM, META]
+tools: [AGREE]
 date: 2012-01-01 00:00:00
 ---
 
