Paragraph about Resolute

--- a/tools/resolute.html
+++ b/tools/resolute.html
@@ -7,5 +7,10 @@ download: "https://github.com/smaccm/smaccm/releases"
 ---
 
 <p>
-Resolute does stuff
+Resolute is a language and tool for developing architectural assurance
+cases. A user specifies rules for constructing assurance cases and
+provides an architectural model. Resolute instantiates those rules
+based on the architectural model and searches for a complete assurance
+case. The rules are specified in a Prolog-like logical language, and the
+architectural model is specified in AADL.
 </p>
