--- a/tools/agree.html
+++ b/tools/agree.html
@@ -7,5 +7,5 @@ download: "https://github.com/smaccm/smaccm/releases"
 ---
 
 <p>
-AGREE does stuff
+The Assume Guarantee REasoning Environment (AGREE) is a compositional, assume-guarantee-style model checker for AADL models.  It is compositional in that it attempts to prove properties about one layer of the architecture using properties allocated to subcomponents.  The composition is performed in terms of assumptions and guarantees that are provided for each component.  Assumptions describe the expectations the component has on the environment, while guarantees describe bounds on the behavior of the component.  AGREE uses k-induction as the underlying algorithm for model checking.  
 </p>
