--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -8,7 +8,7 @@ email: andrew.gacek@gmail.com
 picture: /images/gacek.jpg
 ---
 
-Andrew Gacek is a Industrial Logician at the Rockwell Collins
+Andrew Gacek is an Industrial Logician at the Rockwell Collins
 Advanced Technology Center.
 
 He earned his PhD in Computer Science from the University of
