--- a/publications/backes2015nfm.html
+++ b/publications/backes2015nfm.html
@@ -5,6 +5,7 @@ title: "Requirements Analysis of a Quad-Redundant Flight Control System"
 info: NASA Formal Methods Symposium, 2015
 link: "pdf/backes2015nfm.pdf"
 projects: [CVFCS]
+tools: [AGREE]
 date: 2015-04-30 00:00:00
 ---
 In this paper we detail our effort to formalize and prove
