--- a/projects/fmtq.html
+++ b/projects/fmtq.html
@@ -24,4 +24,4 @@ model checking, and abstract interpretation) and explore promising new approache
 to the qualification of formal methods tools. We will produce the qualification artifacts for an open source formal
 verification tool, the <A href="http://clc.cs.uiowa.edu/Kind/">Kind model checker</A>. We will also investigate the feasibility of independently verifying tool outputs through the generation of a proof certificate and verification of the certificate with a qualified proof checker.</p>
 
-<p>We are also organizing a <A href="http://www.dagstuhl.de/en/program/calendar/semhp/?semnr=15182">Dagstuhl Seminar</A> to explore the subject of tool qualification with the formal methods research community.</p>
+<p>We are also organizing a <A href="http://www.dagstuhl.de/15182">Dagstuhl Seminar</A> to explore the subject of tool qualification with the formal methods research community.</p>
