--- a/publications/backes2015nfm.html
+++ b/publications/backes2015nfm.html
@@ -11,13 +11,13 @@ date: 2015-04-30 00:00:00
 In this paper we detail our effort to formalize and prove
 requirements for the Quad-redundant Flight Control System (QFCS)
 within NASA's Transport Class Model (TCM). We use a compositional
-approach with assume-guarantee contracts that correspond to the re-
-quirements for software components embedded in an AADL system ar-
-chitecture model. This approach is designed to exploit the verification
+approach with assume-guarantee contracts that correspond to the requirements 
+for software components embedded in an AADL system architecture model. 
+This approach is designed to exploit the verification
 effort and artifacts that are already part of typical software verification
 processes in the avionics domain. Our approach is supported by an AADL
-annex that allows specification of contracts called AGREE along with a
-tool for performing compositional verification. The goal of this paper is
+annex that allows specification of contracts along with a
+tool called AGREE for performing compositional verification. The goal of this paper is
 to show the benefits of a compositional verification approach applied to
 a realistic avionics system and to demonstrate the effectiveness of the
 AGREE tool in performing this analysis.
