fixed a typo. Thanks Lucas!

--- a/publications/kune2013sp.html
+++ b/publications/kune2013sp.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [D. Kune, J. Backes, S. Clark, D. Kramer, M. Reynolds, K. Fu, Y. Kim, W. Xu]
 title: "Ghost Talk: Mitigating EMI Signal Injection Attacks against Analog Sensors"
-info: Proceedings of IEEE Symposium on Secuirty and Privacy, 2013
+info: Proceedings of IEEE Symposium on Security and Privacy, 2013
 link: "pdf/kune2013sp.pdf"
 date: 2013-03-01 00:00:00
 ---
