fixing problems copying the abstract

--- a/publications/backes2013phd.html
+++ b/publications/backes2013phd.html
@@ -11,13 +11,11 @@ Boolean satisability (SAT) was the rst problem to be proven to be NP-Complete.
 The proof, provided by Stephen Cook in 1971, demonstrated that inputs accepted by
 a non-deterministic Turing machine can be described by satisfying assignments of a
 Boolean formula. The reduction to SAT feels natural for a wealth of decision problems;
-this has motivated an immense amount of research into heuristics for solving SAT in-
-stances quickly. Over the past decade the performance of SAT solvers has improved
+this has motivated an immense amount of research into heuristics for solving SAT instances quickly. Over the past decade the performance of SAT solvers has improved
 tremendously, and as a consequence, real-world problems that were once thought to be
 intractable are now feasible in many cases.
 In this thesis we discuss how some problems in logic synthesis and verication can be
-solved with Boolean satisability. The dissertation begins by discussing Cyclic Combi-
-national Circuits. Cyclic Combinational Circuits are logic circuits that contain feedback,
+solved with Boolean satisability. The dissertation begins by discussing Cyclic Combinational Circuits. Cyclic Combinational Circuits are logic circuits that contain feedback,
 but exhibit no state behavior. Many functions can be implemented with fewer gates
 using a cyclic topology rather than an acyclic topology. A pivotal step in synthesizing
 these circuits is proving whether or not the resulting structure is actually combinational,
