--- a/projects/ccas.html
+++ b/projects/ccas.html
@@ -2,10 +2,10 @@
 layout: project
 shortname: CCAS
 longname: Certification Considerations for Adaptive Systems
-sort: 2015
+sort: 2014
 ---
 
 <p>Advanced capabilities planned for the next generation of aircraft, including those that will operate within the Next Generation Air Transportation System (NextGen), will necessarily include complex new algorithms and non-traditional software elements. These aircraft will likely incorporate adaptive control algorithms that will provide enhanced safety, autonomy, and robustness during adverse conditions. Unmanned aircraft will operate alongside manned aircraft in the National Airspace (NAS), with intelligent software performing the high-level decision-making functions normally performed by human pilots. Even human-piloted aircraft will necessarily include more autonomy. However, there are serious barriers to the deployment of new capabilities, especially for those based upon software including adaptive control (AC) and artificial intelligence (AI) algorithms. Current civil aviation certification processes are based on the idea that the correct behavior of a system must be completely specified and verified prior to operation. </p>
 
-<p>The <A href="ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20150005863.pdf">final report for NASA</A> produced by Rockwell Collins and SIFT documents our comprehensive study of the state of the art in intelligent and adaptive algorithms for the civil aviation domain, categorizing the approaches used and identifying gaps and challenges associated with certification of each approach. </p>
+<p>The <A href="http://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20150005863.pdf">final report for NASA</A> produced by Rockwell Collins and SIFT documents our comprehensive study of the state of the art in intelligent and adaptive algorithms for the civil aviation domain, categorizing the approaches used and identifying gaps and challenges associated with certification of each approach. </p>
 
