--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -6,6 +6,7 @@ author_key: A. Gacek
 position: Industrial Logician
 email: andrew.gacek@gmail.com
 picture: /images/gacek.jpg
+location: loonwerks
 ---
 
 Andrew Gacek is an Industrial Logician at the Rockwell Collins
