--- a/people/david-hardin.html
+++ b/people/david-hardin.html
@@ -3,9 +3,10 @@ layout: person
 fullname: David Hardin
 sort: Hardin
 author_key: D. Hardin
-position: Honorary Member
+position: Principal Research Engineer
 picture: /images/hardin.jpg
 email: david.hardin@rockwellcollins.com
+location: cornwerks
 ---
 
 
