--- a/people/index.html
+++ b/people/index.html
@@ -6,7 +6,7 @@ title: "Loonwerks: People"
 {% include sorted-elements.html %}
 
 <div id="people">
-  {% for person in sorted_people %}
+  {% for person in sorted_loonwerks %}
   <div class="summary">
     <a href="{{ person.url }}">
       <img src="{{ person.picture }}" />
