--- a/people/konrad-slind.html
+++ b/people/konrad-slind.html
@@ -6,6 +6,7 @@ author_key: K. Slind
 position: Industrial Logician
 picture: /images/slind.jpg
 email: konrad.slind@gmail.com
+location: loonwerks
 ---
 
 <p>
