--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div id="home">
 <p>
-Loonwerks is a finite set of formal methods researchers based in the <A href="https://www.google.com/maps/place/Rockwell+Collins,+Telegraph+Road,+Minneapolis,+MN/@44.8608324,-93.3833626,15z/data=!4m2!3m1!1s0x87f62234f8b99c6d:0xd42df9db45b2c2d1">Minneapolis office</A> of Rockwell Collins.  Our work is focused on the use of formal methods to create safe and secure avionics software.  We build tools that make the latest advances in automated analysis from the research community accessible to system and software developers in industry.  
+Loonwerks is a finite set of formal methods researchers based in the <A href="https://www.google.com/maps/place/Rockwell+Collins,+Telegraph+Road,+Minneapolis,+MN/@44.8608324,-93.3833626,15z/">Minneapolis office</A> of Rockwell Collins.  Our work is focused on the use of formal methods to create safe and secure avionics software.  We build tools that make the latest advances in automated analysis from the research community accessible to system and software developers in industry.  
 </p>
 
 <img src="/images/minneapolis-bw.png" />
