--- a/publications/katis2015vstte.html
+++ b/publications/katis2015vstte.html
@@ -2,7 +2,8 @@
 layout: publication
 authors: [A. Katis, A. Gacek, M. Whalen]
 title: "Machine-checked proofs for realizability checking algorithms"
-info: "7th Conference on Verified Software: Theories, Tools, and Experiments (VSTTE 2015), San Fransisco, CA, USA, July 18-19, 2015."
+info: "7th Conference on Verified Software: Theories, Tools, and
+Experiments (VSTTE 2015), San Fransisco, CA, USA, July 18-19, 2015"
 link: "http://arxiv.org/pdf/1502.01292v2.pdf"
 slides: "/publications/slides/gacek2008ijcar.pdf"
 date: 2015-07-18 00:00:00
