--- a/publications/cofer2015dagstuhl.html
+++ b/publications/cofer2015dagstuhl.html
@@ -5,7 +5,7 @@ title: "Qualification of Formal Methods Tools"
 info: Dagstuhl Seminar 15182
 link: "pdf/cofer2015dagstuhl.pdf"
 date: 2015-08-03 00:00:00
-projects: FMTQ
+projects: [FMTQ]
 ---
 
 Formal methods tools have been shown to be effective at finding defects in and verifying the
