--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -23,11 +23,15 @@ sort: 2012
 <li>Formally verified operating system software</li>
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
-<p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird helicopter to demonstrate their practicality and effectiveness.  At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.  
-Our tools for secure software development and analysis are available for transition to other vehicle programs.  </p>
+<p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our tools for secure software development and analysis are available for transition to other vehicle programs.  At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.  
+</p>
 
+<p>At the end of phase 2 (July 2015), we conducted a flight test of Boeing's ULB running SMACCM software, including the seL4 microkernel:</p>
+<iframe width="360" height="202" src="../video/HACMS Short Version v6.wmv" frameborder="0" allowfullscreen></iframe>
 <p>A brief introduction to the goals of the project:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/_W8syquqxus" frameborder="0" allowfullscreen></iframe>
+<p>SMACCM quadcopter on 60 Minutes:</p>
+<iframe width="360" height="202" src="https://www.youtube.com/embed/4oONdV5RYp8" frameborder="0" allowfullscreen></iframe>
 <p>A nice overview of Phase 1 of the project from our partners at NICTA:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/2tokRPFrKx0" frameborder="0" allowfullscreen></iframe>
 
