--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -30,7 +30,7 @@ sort: 2012
 <iframe width="360" height="202" src="../video/HACMS Short Version v6.wmv" frameborder="0" allowfullscreen></iframe>
 <p>A brief introduction to the goals of the project:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/_W8syquqxus" frameborder="0" allowfullscreen></iframe>
-<p>SMACCM quadcopter on 60 Minutes:</p>
+<p>Phase 1 SMACCM quadcopter on 60 Minutes:</p>
 <iframe width="360" height="202" src="https://www.youtube.com/embed/4oONdV5RYp8" frameborder="0" allowfullscreen></iframe>
 <p>A nice overview of Phase 1 of the project from our partners at NICTA:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/2tokRPFrKx0" frameborder="0" allowfullscreen></iframe>
