--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -27,7 +27,7 @@ sort: 2012
 </p>
 
 <p>At the end of phase 2 (July 2015), we conducted a flight test of Boeing's ULB running SMACCM software, including the seL4 microkernel:</p>
-<iframe width="360" height="202" src="../video/HACMS Short Version v6.wmv" frameborder="0" allowfullscreen></iframe>
+<iframe width="360" height="202" src="https://www.youtube.com/embed/OerkxG6L4SM" frameborder="0" allowfullscreen></iframe>
 <p>A brief introduction to the goals of the project:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/_W8syquqxus" frameborder="0" allowfullscreen></iframe>
 <p>Phase 1 SMACCM quadcopter on 60 Minutes:</p>
