Corrected journal name

--- a/publications/cofer2015itea.html
+++ b/publications/cofer2015itea.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [D. Cofer]
 title: "Taming the Complexity Beast"
-info: International Test and Evaluation (ITEA) Journal, December 2015
+info: International Test and Evaluation Association (ITEA) Journal, December 2015
 link: "pdf/cofer2015itea.pdf"
 date: 2015-12-01 00:00:00
 projects: [DO-333, SMACCM, CVFCS]
