--- a/tools/jkind.html
+++ b/tools/jkind.html
@@ -18,13 +18,14 @@ violation.
 </p>
 
 <p>
-JKind is used as the back-end model checker for many projects and tools
-at Rockwell Collins including
-the <a href="/tools/agree.html">AGREE</a> tool. JKind is designed to
-be cross-platform, reliable, and easy to extend, with power and
-performance as secondary goals. JKind is mostly compatible with
-the <a href="http://clc.cs.uiowa.edu/Kind/">KIND</a> series of model
-checkers.
+JKind is used as the back-end model checker for many projects and
+tools at Rockwell Collins including
+the <a href="/tools/agree.html">AGREE</a> tool and
+the <a href="https://github.com/lgwagner/SIMPAL">SIMPAL</a> tool.
+JKind is designed to be cross-platform, reliable, and easy to extend,
+with power and performance as secondary goals. JKind is mostly
+compatible with the <a href="http://clc.cs.uiowa.edu/Kind/">KIND</a>
+series of model checkers.
 </p>
 
 <p>
