Link to latest paper

--- a/publications/katis2015vstte.html
+++ b/publications/katis2015vstte.html
@@ -4,7 +4,7 @@ authors: [A. Katis, A. Gacek, M. Whalen]
 title: "Machine-checked proofs for realizability checking algorithms"
 info: "7th Conference on Verified Software: Theories, Tools, and
 Experiments (VSTTE 2015), San Fransisco, CA, USA, July 18-19, 2015"
-link: "http://arxiv.org/pdf/1502.01292v2.pdf"
+link: "http://arxiv.org/pdf/1502.01292.pdf"
 date: 2015-07-18 00:00:00
 ---
 
