Add "Iowa Chapter"

--- a/people/darren-cofer.html
+++ b/people/darren-cofer.html
@@ -6,7 +6,7 @@ author_key: D. Cofer
 email: cofer@ieee.org
 position: Fellow
 picture: /images/cofer.jpg
-location: loonwerks
+location: minnesota
 ---
 
 <p>Darren Cofer is a Fellow at the Rockwell Collins Advanced Technology Center.  He earned his PhD in Electrical and Computer Engineering from The University of Texas at Austin.  </p>
