--- a/people/david-hardin.html
+++ b/people/david-hardin.html
@@ -6,7 +6,7 @@ author_key: D. Hardin
 position: Principal Research Engineer
 picture: /images/hardin.jpg
 email: david.hardin@rockwellcollins.com
-location: cornwerks
+location: iowa
 ---
 
 
