--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -6,7 +6,7 @@ author_key: A. Gacek
 position: Industrial Logician
 email: andrew.gacek@gmail.com
 picture: /images/gacek.jpg
-location: loonwerks
+location: minnesota
 ---
 
 <p>
