--- a/people/index.html
+++ b/people/index.html
@@ -5,21 +5,11 @@ title: "Loonwerks: People"
 
 {% include sorted-elements.html %}
 
-<div id="people">
-  {% for person in sorted_loonwerks %}
-  <div class="summary">
-    <a href="{{ person.url }}">
-      <img src="{{ person.picture }}" />
-    </a>
-    <div class="text">
-      <div class="name"><a href="{{ person.url }}">{{ person.fullname }}</a></div>
-      <div class="position">{{ person.position }}</div>
-      <div class="email"><a href="mailto:{{ person.email }}">{{ person.email }}</a></div>
-    </div>
-  </div>
-  {% unless forloop.last %}
-  <div class="separator"></div>
-  {% endunless %}
+<div class="people">
+  {% for person in sorted_people %}
+    {% include person-summary.html %}
+    {% unless forloop.last %}
+    <div class="separator"></div>
+    {% endunless %}
   {% endfor %}
 </div>
-
