--- a/people/john-backes.html
+++ b/people/john-backes.html
@@ -6,7 +6,7 @@ author_key: J. Backes
 position: Research Scientist
 picture: /images/backes.jpg
 email: john.backes@gmail.com
-location: loonwerks
+location: minnesota
 ---
 
 <p>John Backes is a Senior Research Scientist at the Rockwell Collins Advanced Technology Center. He earned his PhD from the Department of Electrical and Computer Engineering at the University of Minnesota.  He is the principle developer of AGREE, a compositional verification tool for AADL models.  He is currently working as part of the air vehicle team in DARPA's High Assurance Cyber Military Systems program. He is also working on the NASA funded project: Compositional Verification of Flight Critical Systems.  His interests include SMT-Solving, Model Checking, and Logic Synthesis.</p>
